--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Rede Social</title>
+   <title>Projeto Rede Social</title>
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="/style.css/style.css">
 </head>
 <body>
-   
+   <main>
+   <iframe src="imagens/frame-iphone.png"></iframe>
+   </main>
+   <footer>
+
+   </footer>
+
+
 </body>
 </html>
