--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Projeto Rede Social</title>
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-   <link rel="stylesheet" href="/style.css/style.css">
+   <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
    <main>
-   <iframe src="imagens/frame-iphone.png"></iframe>
+      <section id="telefone">
+
+      </section>
+      <section id="redes-sociais">
+
+      </section>
    </main>
-   <footer>
-
-   </footer>
-
-
 </body>
 </html>
