--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <main>
       <section id="telefone">
-
+         <iframe src="/home.html" frameborder="0" nome="tela" id="tela" ></iframe>
       </section>
       <section id="redes-sociais">
 
