--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
    <main>
       <section id="telefone">
-         <iframe src="/home.html" frameborder="0" nome="tela" id="tela" ></iframe>
+         <iframe src="/home.html" frameborder="0" name="tela" id="tela" ></iframe>
       </section>
       <section id="redes-sociais">
-         <a href="#"><img src="/imagens/logo-home.jpg" alt="logo-home"></a><br>
-         <a href="#"><img src="/imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
-         <a href="#"><img src="/imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
-         <a href="#"><img src="/imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
-         <a href="#"><img src="/imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
-         <a href="#"><img src="/imagens/" alt=""><img src="/imagens/logo-github.jpg" alt="logo-github"></a>
+         <a href="/home.html" target="tela"><img src="/imagens/logo-home.jpg" alt="logo-home"></a><br>
+         <a href="/facebook.html" target="tela"><img src="/imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
+         <a href="/instagram.html" target="tela"><img src="/imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
+         <a href="/twitter.html" target="tela"><img src="/imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
+         <a href="/youtube.html" target="tela"><img src="/imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
+         <a href="/github.html" target="tela"><img src="/imagens/" alt=""><img src="/imagens/logo-github.jpg" alt="logo-github"></a>
       </section>
    </main>
 </body>
